[package]
name = "pmll_logic_loop_knowledge_block"
version = "0.1.0"
edition = "2021"

# Author info; you can add more names or contact if needed.
authors = ["Josef Kurk Edwards (OpenAI) <josef@example.com>"]

description = "An example Rust project demonstrating cargo build"
license = "MIT"

[dependencies]
# Add your dependencies here, for example:
# serde = "1.0"
# rand = "0.8"

[package]
name = "pmll_logic_loop_knowledge_block"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Josef Kurk Edwards (OpenAI) <josef@example.com>"]
description = "An upgraded Rust project demonstrating cargo build and common dependencies."

# Optional: if you're publishing to crates.io, you can also include:
# repository = "https://github.com/YOUR_USERNAME/YOUR_REPO"

[dependencies]
# Example commonly used crates:
serde = "1.0"
rand = "0.8"

# If you need additional crates, add them here (e.g. 'reqwest', 'tokio', etc.)

[profile.release]
# Example release build settings, if needed
opt-level = 3p
